--- a/index.html
+++ b/index.html
@@ -100,11 +100,19 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
       <h1>Додай звуку і стилю своєму авто</h1>
       <p>Великий вибір вихлопних насадок з доставкою по Україні.</p>
       <p>Порадимо — підберемо — надішлемо</p>
-      <a href="#shop" class="buttonTG-hero">В каталог
+      <div class="hero-d-fl">
+        <a href="#shop" class="buttonTG-hero">В каталог
         <svg>
             <use href="#arrow" ></use>
           </svg>
       </a>
+      <div class="hero-socials">
+        <a href="https://t.me/akrapovic_kiev_ua" target="_blank"><img src="src/tg.svg" alt=""></a>
+        <a href="https://www.tiktok.com/@akrapovic.kiev.ua" target="_blank"><img src="src/tiktok.svg" alt=""></a>
+        <a href="https://www.instagram.com/akrapovic.kiev.ua/" target="_blank"><img src="src/inst.svg" alt=""></a>
+      </div>
+      </div>
+      
     </section>
     <div class="image-container">
   <img src="src/Frame.png" alt="">
@@ -219,6 +227,36 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
           <div class="price-wrapper">
             <h3>1899 <span>грн</span></h3>
             <a href="#shop" class="button-37 buyButton" data-product="3746"
+              >Замовити</a
+            >
+          </div>
+        </div>
+        <div class="item">
+          <div class="swiper lightgallery-swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <a href="src/0390/1.png"><img src="src/0390/1.png" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/0390/2.png"><img src="src/0390/2.png" alt="item1" /></a>
+              </div>
+              <div class="swiper-slide">
+                <a href="src/0390/3.png"><img src="src/0390/3.png" alt="item1" /></a>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+          <h2>Насадка одинарна</h2>
+          <div class="option-wrapper">
+    <h4><span class="item_option">Матеріал: </span>Нержавіюча сталь, карбон</h4>
+    <h4><span class="item_option">Загальна довжина: </span>16 см</h4>
+    <h4><span class="item_option">Внутрішній діаметр посадкового отвору:</span>6.3 см</h4>
+    <h4><span class="item_option">Зовнішній діаметр на виході:</span>8.9 см</h4>
+            <h4><span class="item_option">Артикул:</span>4109</h4>
+          </div>
+          <div class="price-wrapper">
+            <h3>899 <span>грн</span></h3>
+            <a href="#shop" class="button-37 buyButton" data-product="4109"
               >Замовити</a
             >
           </div>
