--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   gtag('config', 'G-3X678HV55V');
 </script>
-  <!-- Meta Pixel Code -->
+  <!-- Meta Pixel Code --->
 <script>
 !function(f,b,e,v,n,t,s)
 {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
